Fixed img for cares.

--- a/_posts/2020-09-25-cares.md
+++ b/_posts/2020-09-25-cares.md
@@ -2,7 +2,7 @@
 layout: post
 author: Laurin
 title: CARES Act Workflow
-img: assets/images/cares.PNG
+img: assets/images/cares.png
 description: CARES Act fund disbursement workflow
 tags: HTTP AdobeSign CARES PowerAutomate
 category: work
