update 3d game post with dropbox images

--- a/_posts/2022-10-16-3D-Game.md
+++ b/_posts/2022-10-16-3D-Game.md
@@ -1,12 +1,57 @@
 ---
 layout: post
 author: Laurin
-title: 3D Videogame
+title: 3D Videogame DevLog
 img: assets/images/game_capture_night.PNG
 description: Creating a Zelda/Xenoblade like 3D game in Unity. 
 tags: Unity C# Blender
 category: personal
 ---
+## Table of Contents
+* [Current Progress](#current-progress)
+* [Quick Reference](#what-ive-learned-quick-reference)
+* [Timeline](#timeline)
+* [Bugs](#bugs)
+
+## Current Progress
+12-20-22
+* Working on V2 of Henry (using anime base-mesh in t-pose)
+    * The animations from mixamo were broken with my hand-made tutorial mesh. The char was not in T-pose which created holes. Rather than try to fix it I downloaded a base mesh and imported the hair and eyes I had done previously. 
+    * The last issue i'm tackling is the weight painting is off for the hair. Apparently automatic weights is having issues with the backside of the hair mesh? 
+* Design
+    * Still working on how the game is played. So far I've decided that the worlds are connected / the same and I want some sort of combo / free form attacks. (I don't want xenoblade - button attacks. It's too repetitive and not creative enough in my opinion. I'd rather have the player move around organically like botw and then have teammate pair ups and/or combos)
+* Programming
+    * no change
+
+## What I've Learned (Quick Reference)
+* [3D modeling](#3d-modeling)
+* [Blender](#blender)
+
+### 3D Modeling
+#### Workflow 
+So the flow I've found that works for me
+1. Create mesh (preferably find a base-mesh online with a usable license and modify it. SketchFab has a lot of models)
+1. Rig using rigify
+1. Create detailed animations in blender
+1. Bake the animations and generate a game rig with Game Core Tools add-on. 
+    * If you are missing bones, have too many, or the bones are disconnected, fix the rig. It's still less work than doing it yourself. 
+1. Shift select the mesh and the rig
+1. Export to fbx
+1. In Unity, click the fbx obj and update the inspector to use 'humanoid'. Apply the change. If there are errors you can choose 'configure' and see what bones are missing, etc. 
+
+#### Rigging
+* Game rigs are different from animation rigs. 
+    * Animation rigs, like rigify in blender, help you get animation details down but are too rigorous for game engines. 
+    * You have to provide a seperate game rig for game engines that has less bones but specific ones for a humanoid. You then 'bake' the animations made in blender so your detailed animations are beautifully kept and the engine can run smoothly (physics) with the game rig. 
+    * Game rigs also can use generic animations like mixamo. 
+* Mixamo has free characters and free animations that can be mapped to any rig. 
+    * Downloading Y or X bot is great for programming 3D humanoid movement if you're model isn't finished. It gets you many animations you'll need while you finish the art. 
+
+#### Blender 
+##### Keyboard Shortcuts
+Alt-H : UnHide all hidden objects
+
+## Timeline
 
 Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters, their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. 
 
@@ -42,13 +87,37 @@ I'm working on creating:
 
 Among other things...
 
-## Character Modeling
-Here's some progress on the character modeling - which is very time consuming and I have a huge respect for 3D artists. 
-
-<img src="/assets/images/henry_modeling_body.PNG" alt="Blocky body with ref images" width="100%"/>
-<img src="/assets/images/henry_modeling_head_hair_roots_off.PNG" alt="Rough hair modeling" width="100%"/>
-<img src="/assets/images/henery_modeling_head_with_materials.PNG" alt="Head with hair, first version" width="100%"/>
-<img src="/assets/images/henry_modeling_body_legs.PNG" alt="Body" width="100%"/>
-<img src="/assets/images/henry_modeling_nose_eyes.PNG" alt="Head version 2" width="100%"/>
+<img src="https://www.dropbox.com/s/y39r74ofixhoush/henry_modeling_body.PNG?raw=1" alt="Blocky body with ref images" width="50%"/>
+<img src="https://www.dropbox.com/s/jwnk8pldfnce314/henry_modeling_head_hair_roots_off.PNG?raw=1" alt="Rough hair modeling" width="50%"/><img src="https://www.dropbox.com/s/ea183ed27zc0fsm/henery_modeling_head_with_materials.PNG?raw=1" alt="Head with hair, first version" width="50%"/><img src="https://www.dropbox.com/s/tmytinz6rn0k8sa/henry_modeling_body_legs.PNG?raw=1" alt="Body" width="50%"/><img src="https://www.dropbox.com/s/gloxlse7lfngdp7/henry_modeling_nose_eyes.PNG?raw=1" alt="Head version 2" width="50%"/>
 
 Progress as of 10-16-22
+
+11-30-22
+Ok more respect for 3D artists. Now I know why art takes so long. Not only do you have to painstakingly create vertices in a certain way to make realistic looking muscles, you have to position the bones, weight paint the bones, paint the textures, match up the textures, and make sure the bones are in the right hierarchy/compatible with the platform you're using.
+
+* Working on V2 of Henry (using anime base-mesh in t-pose)
+    * The animations from mixamo were broken with my hand-made tutorial mesh. The char was not in T-pose which created holes. 
+* Using Y bot in Unity with idle, walking, and running animations. It'll help me get some of the physics done. 
+
+12-20-22
+Using mixamo I've found my model isn't going to work. Using a standard walking animation my character's arms are ripped apart and unnatural. I feel this is a problem because my character wasn't in a T pose. Rather than try to fix it I downloaded a base mesh and imported the hair and eyes I had done previously. 
+
+<img src="https://www.dropbox.com/s/fg025t82jw5jr4a/henry_from_basemesh.PNG?raw=1" alt="Head version 2" width="100%"/>
+
+To be honest I prefer the version I made though I know the basemesh is much more accurate muscle-wise. I'll likely change the head to match what I want and go from there. 
+
+The basemesh makes my character look younger and simply doesn't have the facial features I want. The eyes felt way too big and didn't have that soft expression I was used to looking at. 
+
+<img src="https://www.dropbox.com/s/bozfebvofb89n64/henry_modeling_head.PNG?raw=1" alt="Head version 2" width="100%"/>
+
+Here's them side by side: 
+
+<img src="https://www.dropbox.com/s/8f7yxlywx0mh25j/henry_game_rig.PNG?raw=1" alt="Head version 2" width="50%"/><img src="https://www.dropbox.com/s/fg025t82jw5jr4a/henry_from_basemesh.PNG?raw=1" alt="Head version 2" width="50%"/>
+
+## Bugs 
+### Tears in model in animation
+Solution: The model needs to be in T pose
+### Unity crashes when stopping play mode
+Solution: something has a leak. The red items in the world are the culprit. Delete them and it should work again. 
+### objects are weight painted red but don't move with the bone
+Solution: Blender doesn't always weight paint the back of the object. You'll have to do it. 
