--- a/_posts/2022-10-16-3D-Game.md
+++ b/_posts/2022-10-16-3D-Game.md
@@ -2,26 +2,51 @@
 layout: post
 author: Laurin
 title: 3D Videogame DevLog
-img: assets/images/game_capture_night.PNG
+img: assets/images/Screenshot_2023-09-24.png
 description: Creating a Zelda/Xenoblade like 3D game in Unity. 
 tags: Unity C# Blender
 category: personal
 ---
 ## Table of Contents
 * [Current Progress](#current-progress)
+* [Introduction](#introduction)
 * [Quick Reference](#what-ive-learned-quick-reference)
 * [Timeline](#timeline)
 * [Bugs](#bugs)
 
+
+<center><img src="/assets/images/Screenshot_2023-09-24.png" alt="Blocky body with ref images" class="img-fluid" alt="Responsive image" /></center>
+
 ## Current Progress
-12-20-22
-* Working on V2 of Henry (using anime base-mesh in t-pose)
-    * The animations from mixamo were broken with my hand-made tutorial mesh. The char was not in T-pose which created holes. Rather than try to fix it I downloaded a base mesh and imported the hair and eyes I had done previously. 
-    * The last issue i'm tackling is the weight painting is off for the hair. Apparently automatic weights is having issues with the backside of the hair mesh? 
-* Design
-    * Still working on how the game is played. So far I've decided that the worlds are connected / the same and I want some sort of combo / free form attacks. (I don't want xenoblade - button attacks. It's too repetitive and not creative enough in my opinion. I'd rather have the player move around organically like botw and then have teammate pair ups and/or combos)
-* Programming
-    * no change
+1-14-24
+* VROID models walking around with Mixamo animations. Can change to a healing class. Have one party member following you. 
+
+So far I have: 
+1. Inventory & Inventory UI 
+2. Quick Inventory / Equipment Selection 
+3. Weather
+4. Ocean / Water 
+5. Third Person Character Controller & Camera 
+6. Pickup Items 
+7. Hunger / Thirst / Strength Depletion & UI 
+8. Read NPC Dialogue
+9. Take damage from Enemy 
+10. Fully rigged 3D character 
+
+I'm working on creating: 
+1. Affinity system (at least with party members)
+2. Combat 
+3. Swimming
+4. Climbing 
+5. Sailing / Boating 
+6. Puzzles 
+7. Camping (to fill Hunger, Strength needs)
+8. Armor / Clothing effects 
+
+Among other things...
+
+## Introduction
+Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters: their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. 
 
 ## What I've Learned (Quick Reference)
 * [3D modeling](#3d-modeling)
@@ -52,67 +77,17 @@ So the flow I've found that works for me
 Alt-H : UnHide all hidden objects
 
 ## Timeline
+* 2020 I began learning Unity. With the help of the Brackeys youtube channel I slowly became familiar with the popular game engine. I also began learning about shaders, which I found is a feat of itself. 
+* 2021 I began learning modeling, and was still trying to pinpoint what I was going for in the story and for gameplay. 
+* 2022 I found Thomas Brush and learned what I was doing wrong: 
+    1. I had no design document - therefore I was creating without knowing what I was supposed to be creating. The worst nightmare for a programmer trying to program - you can't think creatively and program it at the same time. The design needs to come first. 
+    2. I needed to create a small polished version of my game showing what it was all about, not start creating the entire thing. And I needed to get feedback on that small polished version to see if the game was interesting to others. 
+* 2023
+    * Found a 3D modeling program (VROID) that is easy to create 3D human models, fully rigged. 
+    * Able to transition to the 'Battle' scene 
+    * Basic character animations and UI 
+    * Still working towards that small core snippet to show publishers
 
-Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters, their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. 
-
-In 2020 I began learning Unity. With the help of the Brackeys youtube channel I slowly became familiar with the popular game engine. I also began learning about shaders, which I found is a feat of itself. 
-
-In 2021 I began learning modeling, and was still trying to pinpoint what I was going for in the story and for gameplay. 
-
-In 2022 I found Thomas Brush and learned what I was doing wrong: 
-1. I had no design document - therefore I was creating without knowing what I was supposed to be creating. The worst nightmare for a programmer trying to program - you can't think creatively and program it at the same time. The design needs to come first. 
-2. I needed to create a small polished version of my game showing what it was all about, not start creating the entire thing. And I needed to get feedback on that small polished version to see if the game was interesting to others. 
-
-So I began taking these steps and it has helped push the project from the 'start but never finish' stage. So far I have: 
-1. Inventory & Inventory UI 
-2. Quick Inventory / Equipment Selection 
-3. Weather
-4. Ocean / Water 
-5. Third Person Character Controller & Camera 
-6. Pickup Items 
-7. Hunger / Thirst / Strength Depletion & UI 
-8. Read NPC Dialogue
-9. Take damage from Enemy 
-
-I'm working on creating: 
-1. Fully rigged 3D character 
-2. Affinity system (at least with party members)
-3. Combat 
-4. Swimming
-5. Climbing 
-6. Sailing / Boating 
-7. Puzzles 
-8. Camping (to fill Hunger, Strength needs)
-9. Armor / Clothing effects 
-
-Among other things...
-
-<img src="https://www.dropbox.com/s/y39r74ofixhoush/henry_modeling_body.PNG?raw=1" alt="Blocky body with ref images" width="50%"/>
-<img src="https://www.dropbox.com/s/jwnk8pldfnce314/henry_modeling_head_hair_roots_off.PNG?raw=1" alt="Rough hair modeling" width="50%"/><img src="https://www.dropbox.com/s/ea183ed27zc0fsm/henery_modeling_head_with_materials.PNG?raw=1" alt="Head with hair, first version" width="50%"/><img src="https://www.dropbox.com/s/tmytinz6rn0k8sa/henry_modeling_body_legs.PNG?raw=1" alt="Body" width="50%"/><img src="https://www.dropbox.com/s/gloxlse7lfngdp7/henry_modeling_nose_eyes.PNG?raw=1" alt="Head version 2" width="50%"/>
-
-Progress as of 10-16-22
-
-11-30-22
-Ok more respect for 3D artists. Now I know why art takes so long. Not only do you have to painstakingly create vertices in a certain way to make realistic looking muscles, you have to position the bones, weight paint the bones, paint the textures, match up the textures, and make sure the bones are in the right hierarchy/compatible with the platform you're using.
-
-* Working on V2 of Henry (using anime base-mesh in t-pose)
-    * The animations from mixamo were broken with my hand-made tutorial mesh. The char was not in T-pose which created holes. 
-* Using Y bot in Unity with idle, walking, and running animations. It'll help me get some of the physics done. 
-
-12-20-22
-Using mixamo I've found my model isn't going to work. Using a standard walking animation my character's arms are ripped apart and unnatural. I feel this is a problem because my character wasn't in a T pose. Rather than try to fix it I downloaded a base mesh and imported the hair and eyes I had done previously. 
-
-<img src="https://www.dropbox.com/s/fg025t82jw5jr4a/henry_from_basemesh.PNG?raw=1" alt="Head version 2" width="100%"/>
-
-To be honest I prefer the version I made though I know the basemesh is much more accurate muscle-wise. I'll likely change the head to match what I want and go from there. 
-
-The basemesh makes my character look younger and simply doesn't have the facial features I want. The eyes felt way too big and didn't have that soft expression I was used to looking at. 
-
-<img src="https://www.dropbox.com/s/bozfebvofb89n64/henry_modeling_head.PNG?raw=1" alt="Head version 2" width="100%"/>
-
-Here's them side by side: 
-
-<img src="https://www.dropbox.com/s/8f7yxlywx0mh25j/henry_game_rig.PNG?raw=1" alt="Head version 2" width="50%"/><img src="https://www.dropbox.com/s/fg025t82jw5jr4a/henry_from_basemesh.PNG?raw=1" alt="Head version 2" width="50%"/>
 
 ## Bugs 
 ### Tears in model in animation
