--- a/_posts/2022-10-16-3D-Game.md
+++ b/_posts/2022-10-16-3D-Game.md
@@ -1,24 +1,27 @@
 ---
 layout: post
 author: Laurin
-title: 3D Videogame
-img: assets/images/game_capture_night.PNG
+title: 3D Videogame DevLog
+img: assets/images/Screenshot_2023-09-24.png
 description: Creating a Zelda/Xenoblade like 3D game in Unity. 
 tags: Unity C# Blender
 category: personal
 ---
+## Table of Contents
+* [Current Progress](#current-progress)
+* [Introduction](#introduction)
+* [Quick Reference](#what-ive-learned-quick-reference)
+* [Timeline](#timeline)
+* [Bugs](#bugs)
 
-Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters, their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. 
 
-In 2020 I began learning Unity. With the help of the Brackeys youtube channel I slowly became familiar with the popular game engine. I also began learning about shaders, which I found is a feat of itself. 
+<center><img src="/assets/images/Screenshot_2023-09-24.png" alt="Blocky body with ref images" class="img-fluid" alt="Responsive image" /></center>
 
-In 2021 I began learning modeling, and was still trying to pinpoint what I was going for in the story and for gameplay. 
+## Current Progress
+1-14-24
+* VROID models walking around with Mixamo animations. Can change to a healing class. Have one party member following you. 
 
-In 2022 I found Thomas Brush and learned what I was doing wrong: 
-1. I had no design document - therefore I was creating without knowing what I was supposed to be creating. The worst nightmare for a programmer trying to program - you can't think creatively and program it at the same time. The design needs to come first. 
-2. I needed to create a small polished version of my game showing what it was all about, not start creating the entire thing. And I needed to get feedback on that small polished version to see if the game was interesting to others. 
-
-So I began taking these steps and it has helped push the project from the 'start but never finish' stage. So far I have: 
+So far I have: 
 1. Inventory & Inventory UI 
 2. Quick Inventory / Equipment Selection 
 3. Weather
@@ -28,27 +31,68 @@ So I began taking these steps and it has helped push the project from the 'start
 7. Hunger / Thirst / Strength Depletion & UI 
 8. Read NPC Dialogue
 9. Take damage from Enemy 
+10. Fully rigged 3D character 
 
 I'm working on creating: 
-1. Fully rigged 3D character 
-2. Affinity system (at least with party members)
-3. Combat 
-4. Swimming
-5. Climbing 
-6. Sailing / Boating 
-7. Puzzles 
-8. Camping (to fill Hunger, Strength needs)
-9. Armor / Clothing effects 
+1. Affinity system (at least with party members)
+2. Combat 
+3. Swimming
+4. Climbing 
+5. Sailing / Boating 
+6. Puzzles 
+7. Camping (to fill Hunger, Strength needs)
+8. Armor / Clothing effects 
 
 Among other things...
 
-## Character Modeling
-Here's some progress on the character modeling - which is very time consuming and I have a huge respect for 3D artists. 
+## Introduction
+Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters: their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. 
 
-<img src="/assets/images/henry_modeling_body.PNG" alt="Blocky body with ref images" width="100%"/>
-<img src="/assets/images/henry_modeling_head_hair_roots_off.PNG" alt="Rough hair modeling" width="100%"/>
-<img src="/assets/images/henery_modeling_head_with_materials.PNG" alt="Head with hair, first version" width="100%"/>
-<img src="/assets/images/henry_modeling_body_legs.PNG" alt="Body" width="100%"/>
-<img src="/assets/images/henry_modeling_nose_eyes.PNG" alt="Head version 2" width="100%"/>
+## What I've Learned (Quick Reference)
+* [3D modeling](#3d-modeling)
+* [Blender](#blender)
 
-Progress as of 10-16-22
+### 3D Modeling
+#### Workflow 
+So the flow I've found that works for me
+1. Create mesh (preferably find a base-mesh online with a usable license and modify it. SketchFab has a lot of models)
+1. Rig using rigify
+1. Create detailed animations in blender
+1. Bake the animations and generate a game rig with Game Core Tools add-on. 
+    * If you are missing bones, have too many, or the bones are disconnected, fix the rig. It's still less work than doing it yourself. 
+1. Shift select the mesh and the rig
+1. Export to fbx
+1. In Unity, click the fbx obj and update the inspector to use 'humanoid'. Apply the change. If there are errors you can choose 'configure' and see what bones are missing, etc. 
+
+#### Rigging
+* Game rigs are different from animation rigs. 
+    * Animation rigs, like rigify in blender, help you get animation details down but are too rigorous for game engines. 
+    * You have to provide a seperate game rig for game engines that has less bones but specific ones for a humanoid. You then 'bake' the animations made in blender so your detailed animations are beautifully kept and the engine can run smoothly (physics) with the game rig. 
+    * Game rigs also can use generic animations like mixamo. 
+* Mixamo has free characters and free animations that can be mapped to any rig. 
+    * Downloading Y or X bot is great for programming 3D humanoid movement if you're model isn't finished. It gets you many animations you'll need while you finish the art. 
+
+#### Blender 
+##### Keyboard Shortcuts
+Alt-H : UnHide all hidden objects
+
+## Timeline
+* 2020 I began learning Unity. With the help of the Brackeys youtube channel I slowly became familiar with the popular game engine. I also began learning about shaders, which I found is a feat of itself. 
+* 2021 I began learning modeling, and was still trying to pinpoint what I was going for in the story and for gameplay. 
+* 2022 I found Thomas Brush and learned what I was doing wrong: 
+    1. I had no design document - therefore I was creating without knowing what I was supposed to be creating. The worst nightmare for a programmer trying to program - you can't think creatively and program it at the same time. The design needs to come first. 
+    2. I needed to create a small polished version of my game showing what it was all about, not start creating the entire thing. And I needed to get feedback on that small polished version to see if the game was interesting to others. 
+* 2023
+    * Found a 3D modeling program (VROID) that is easy to create 3D human models, fully rigged. 
+    * Able to transition to the 'Battle' scene 
+    * Basic character animations and UI 
+    * Still working towards that small core snippet to show publishers
+
+
+## Bugs 
+### Tears in model in animation
+Solution: The model needs to be in T pose
+### Unity crashes when stopping play mode
+Solution: something has a leak. The red items in the world are the culprit. Delete them and it should work again. 
+### objects are weight painted red but don't move with the bone
+Solution: Blender doesn't always weight paint the back of the object. You'll have to do it. 
