21 using bootstrap and architect theme

--- a/_posts/2022-10-16-3D-Game.md
+++ b/_posts/2022-10-16-3D-Game.md
@@ -8,45 +8,50 @@ tags: Unity C# Blender
 category: personal
 ---
 ## Table of Contents
-* [Current Progress](#current-progress)
-* [Introduction](#introduction)
-* [Quick Reference](#what-ive-learned-quick-reference)
-* [Timeline](#timeline)
-* [Bugs](#bugs)
-
-
-<center><img src="/assets/images/Screenshot_2023-09-24.png" alt="Blocky body with ref images" class="img-fluid" alt="Responsive image" /></center>
+<div class="list-group">
+  <a href="#current-progress" class="list-group-item list-group-item-action active">
+    Current Progress
+  </a>
+  <a href="#introduction" class="list-group-item list-group-item-action">Introduction</a>
+  <a href="#what-ive-learned-quick-reference" class="list-group-item list-group-item-action">Quick Reference</a>
+  <a href="#timeline" class="list-group-item list-group-item-action">Timeline</a>
+  <a href="#bugs" class="list-group-item list-group-item-action">Bugs</a>
+</div>
+<br>
+<img src="/assets/images/Screenshot_2023-09-24.png" alt="Blocky body with ref images" class="rounded mx-auto d-block" alt="Responsive image" />
 
 ## Current Progress
-1-14-24
-* VROID models walking around with Mixamo animations. Can change to a healing class. Have one party member following you. 
+<p class="font-weight-bold">1-14-24</p>
+<ul class="list-group">
+  <li class="list-group-item active"> VROID models walking around with Mixamo animations. Can change to a healing class. Have one party member following you.</li>
+  <li class="list-group-item">Inventory & Inventory UI </li>
+  <li class="list-group-item">Quick Inventory / Equipment Selection </li>
+  <li class="list-group-item">Weather</li>
+  <li class="list-group-item">Ocean / Water </li>
+  <li class="list-group-item">Third Person Character Controller & Camera  </li>
+  <li class="list-group-item">Pickup Items   </li>
+  <li class="list-group-item">Hunger / Thirst / Strength Depletion & UI   </li>
+  <li class="list-group-item">Read NPC Dialogue  </li>
+  <li class="list-group-item">Take damage from Enemy  </li>
+  <li class="list-group-item">Fully rigged 3D character  </li>
+</ul>
+<br>
 
-So far I have: 
-1. Inventory & Inventory UI 
-2. Quick Inventory / Equipment Selection 
-3. Weather
-4. Ocean / Water 
-5. Third Person Character Controller & Camera 
-6. Pickup Items 
-7. Hunger / Thirst / Strength Depletion & UI 
-8. Read NPC Dialogue
-9. Take damage from Enemy 
-10. Fully rigged 3D character 
-
-I'm working on creating: 
-1. Affinity system (at least with party members)
-2. Combat 
-3. Swimming
-4. Climbing 
-5. Sailing / Boating 
-6. Puzzles 
-7. Camping (to fill Hunger, Strength needs)
-8. Armor / Clothing effects 
-
-Among other things...
+### Future Work 
+<ul class="list-group">
+  <li class="list-group-item"> Affinity system (at least with party members)</li>
+  <li class="list-group-item">Combat  </li>
+  <li class="list-group-item">Swimming</li>
+  <li class="list-group-item">Climbing </li>
+  <li class="list-group-item">Sailing / Boating </li>
+  <li class="list-group-item">Puzzles   </li>
+  <li class="list-group-item">Camping (to fill Hunger, Strength needs)</li>
+  <li class="list-group-item">Armor / Clothing effects </li>
+</ul>
+<br>
 
 ## Introduction
-Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters: their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. 
+<p>Many developers start out creating small games, I'm no exception. In high school I was creating my own versions of Mario, Pacman, etc. However I wanted to create something bigger for several years. I developed characters: their personalities, looks, etc in high school. I jotted down gameplay ideas for years during and post college. During the pandemic lockdowns, I finally began creating my dream game: A 3D Zelda-like world with an invisible spiritual world. My favorite games have mostly all been in 3D: Mario Sunshine, Mario Galaxy 1 & 2, Breath of the Wild, Wind Waker, Harvest Moon. </p>
 
 ## What I've Learned (Quick Reference)
 * [3D modeling](#3d-modeling)
