22 added table of contents column

--- a/_posts/2022-10-16-3D-Game.md
+++ b/_posts/2022-10-16-3D-Game.md
@@ -6,15 +6,8 @@ img: assets/images/Screenshot_2023-09-24.png
 description: Creating a Zelda/Xenoblade like 3D game in Unity. 
 tags: Unity C# Blender
 category: personal
+end_date: "ongoing"
 ---
-## Table of Contents
-* [Current Progress](#current-progress)
-* [Introduction](#introduction)
-* [Quick Reference](#what-ive-learned-quick-reference)
-* [Timeline](#timeline)
-* [Bugs](#bugs)
-
-
 <center><img src="/assets/images/Screenshot_2023-09-24.png" alt="Blocky body with ref images" class="img-fluid" alt="Responsive image" /></center>
 
 ## Current Progress
