--- a/_posts/2023-06-15-dogchain.md
+++ b/_posts/2023-06-15-dogchain.md
@@ -6,6 +6,8 @@ img: assets/images/dogchain_logo_256.png
 description: Creating a blockchain with another shiba inu coin
 tags: Javascript Blockchain LissaCoin
 category: personal
+github_url: https://github.com/Dev-Laurin/dogchain
+toc: false 
 ---
 
 With crypto hitting peak popularity in 2021 and 2022 (before the big crypto scam reveal) I wanted to create my own coin based off my dog who recently passed away. She happened to be a shiba inu, which happens to be the dog breed of choice for crypto coins. However, besides just creating 'LissaCoin (my doggo's name was Alissa but we called her 'Lissa' often) I wanted to learn about the foundation of crypto itself: the blockchain. Thus the creation of dogchain, my own blockchain for the purposes of self-education as well as immortalization of my beloved childhood friend. 
