--- a/_posts/2020-09-25-cares.md
+++ b/_posts/2020-09-25-cares.md
@@ -6,6 +6,7 @@ img: assets/images/cares.png
 description: CARES Act fund disbursement workflow
 tags: HTTP AdobeSign CARES PowerAutomate
 category: work
+toc: false 
 ---
 While working for the FNSB I was assigned to creating a technical solution to distribute CARES (Coronavirus Aid, Relief, and Economic Security) funding to small businesses within the borough quickly, efficiently, and conveniently. 
 
@@ -13,14 +14,14 @@ Working in a team, my gis co-worker created the webform for businesses to use wh
 
 At first I started creating something simple in Power Automate (we were exploring our new Microsoft tech), Microsoft's code-less power platform. It was only meant to route data right? I had HTTP requests pulling data from Esri's API and HTTP POST requests going to AdobeSign's API. However as time went on and requirements were added/changed, the code-less solution became more massive and less maintainable. 
 
-<img src="/assets/images/ms_power_automate_main.png" alt="Microsoft Power Automate main page" width="100%"/>
+<img class="img-thumbnail" src="/assets/images/ms_power_automate_main.png" alt="Microsoft Power Automate main page" width="100%"/>
 <center>(Microsoft's Power Automate)</center><br>
 
 Unfortunately by that point, our deadline for go-live was only weeks away. I could not code anything fast enough to be ready for that deadline...So we were stuck with a massive Power Automate flow. It worked, reliably, but was rather nasty looking. 
 
 It pulled all the new applications in, uploaded their attachments into their new pdf application, as well as auto-filled their data into the new pdf, and routed it to the appropriate parties for signature. 
 
-<img src="/assets/images/cares.png" alt="Flow diagram of Power Automate flow, simplified" width="100%"/>
+<img class="img-thumbnail" src="/assets/images/cares.png" alt="Flow diagram of Power Automate flow, simplified" width="100%"/>
 <center>(Simplified diagram of flow)</center><br>
 
 To my knowledge, applications were being filled out and were quickly responded to whether they were rejected or approved.
